--- a/.github/workflows/test-package-with-unittest.yml
+++ b/.github/workflows/test-package-with-unittest.yml
@@ -8,23 +8,17 @@ on:
 
 jobs:
 
-  run_tests:
+  run-unittest-tests:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: develop
-
       - uses: actions/setup-python@v1
         with:
           python-version: '3.8'
           architecture: 'x64'
-
       - name: Install package
         run: python setup.py install
-
       - name: Install dependencies
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
       - name: Run tests
         run: python -m unittest discover tests
