--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -1,4 +1,4 @@
-name: Test package with unittest
+name: Test package
 
 on:
   push:
@@ -21,4 +21,4 @@ jobs:
       - name: Install dependencies
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run tests
-        run: python -m unittest discover tests
+        run: python -m pytest tests
