--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -22,3 +22,5 @@ jobs:
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run tests
         run: python -m pytest -rA tests
+      - name: Run coverage
+        run: python -m pytest --cov=src tests
