--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -16,10 +16,10 @@ jobs:
         with:
           python-version: '3.8'
           architecture: 'x64'
-      - name: Install package
-        run: python setup.py install
       - name: Install dependencies
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install package
+        run: python -m pip install -e .
       - name: Run tests
         run: python -m pytest -rA tests
       - name: Run coverage
