--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -1,4 +1,4 @@
-name: Test package
+name: Test and coverage package
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  run-package-tests:
+  - install-package:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
@@ -20,7 +20,15 @@ jobs:
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install package
         run: python -m pip install -e .
+
+  - run-tests-pytest:
+    need: install-package
+    steps:
       - name: Run tests
         run: python -m pytest -rA tests
+
+  - run-pytest-coverage:
+    need: install-package
+    steps:
       - name: Run coverage
         run: python -m pytest --cov=src tests
