--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  - install-package:
+  install-package:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
@@ -21,13 +21,13 @@ jobs:
       - name: Install package
         run: python -m pip install -e .
 
-  - run-tests-pytest:
+  run-tests-pytest:
     need: install-package
     steps:
       - name: Run tests
         run: python -m pytest -rA tests
 
-  - run-pytest-coverage:
+  run-pytest-coverage:
     need: install-package
     steps:
       - name: Run coverage
