--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -22,13 +22,13 @@ jobs:
         run: python -m pip install -e .
 
   run-tests-pytest:
-    need: install-package
+    needs: install-package
     steps:
       - name: Run tests
         run: python -m pytest -rA tests
 
   run-pytest-coverage:
-    need: install-package
+    needs: install-package
     steps:
       - name: Run coverage
         run: python -m pytest --cov=src tests
