--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -9,6 +9,7 @@ on:
 jobs:
 
   install-package:
+    runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
