--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  install-package:
+  test-and-coverage-package:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
@@ -21,16 +21,8 @@ jobs:
       - name: Install package
         run: python -m pip install -e .
 
-  run-tests-pytest:
-    runs-on: [ubuntu-latest]
-    needs: install-package
-    steps:
       - name: Run tests
         run: python -m pytest -rA tests
 
-  run-pytest-coverage:
-    runs-on: [ubuntu-latest]
-    needs: install-package
-    steps:
       - name: Run coverage
         run: python -m pytest --cov=src tests
