--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -11,21 +11,20 @@ jobs:
   test-and-coverage-package:
     runs-on: [ubuntu-latest]
     steps:
+
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
           python-version: '3.8'
           architecture: 'x64'
+
       - name: Install dependencies
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install package
         run: python -m pip install -e .
 
-      - name: Run tests
-        run: python -m pytest -rA tests
-
-      - name: Run coverage
-        run: python -m pytest --cov=src --cov-report html:cov_html tests
+      - name: Run tests and code coverage analisis
+        run: python -m pytest
       - name: Archive code coverage results
         uses: actions/upload-artifact@v2
         with:
