--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ aiosqlite~=0.17.0
 pytest~=6.2.3
 pytest-asyncio~=0.14.0
 pytest-cov~=2.11.1
+pytest-html~=3.1.1
 setuptools~=54.2.0
 SQLAlchemy~=1.4.7
