Исключаем из анализа покрытия тестами абстрактные методы

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,10 @@
 venv/
 
 **/__pycache__/
-# Byte-compiled / optimized / DLL files
 *.py[cod]
 
 src/dynamic_settings.egg-info/
 
 .coverage
-
-cov_html/
-
+coverage_html_report/
 pytest-report.html
