--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 minversion = 6.0
-addopts = -rA --cov=src --cov-report html:cov_html --html=pytest-report.html --self-contained-html
+addopts = -rA --html=pytest-report.html --self-contained-html --cov=src --cov-report=html
 testpaths =
     tests
