--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 minversion = 6.0
-addopts = -rA --html=pytest-report.html --self-contained-html --cov=src --cov-report=html
+addopts = -vv --html=pytest-report.html --self-contained-html --cov=src --cov-report=html
 testpaths =
     tests
