--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -12,30 +12,37 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - name: "Install python"
+        uses: actions/setup-python@v1
         with:
-          python-version: '3.8'
-          architecture: 'x64'
+            python-version: '3.8'
+            architecture: 'x64'
 
-      - name: Install dependencies
+      - name: "Install project dependencies"
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Install package
+
+      - name: "Install package"
         run: python -m pip install -e .
 
-      - name: Run tests and code coverage analisis
-        run: python -m pytest
+      - name: "Run tests and code coverage analysis"
+        run: pytest
 
-      - name: Archive pytest results
+      - name: "Archive pytest results"
         uses: actions/upload-artifact@v2
         if: ${{!cancelled()}}
         with:
           name: pytest-report
           path: pytest-report.html
 
-      - name: Archive code coverage results
+      - name: "Archive code coverage results"
         uses: actions/upload-artifact@v2
         if: ${{!cancelled()}}
         with:
           name: code-coverage-report
           path: coverage_html_report
+
+      - name: "Upload coverage to Codecov"
+        uses: codecov/codecov-action@v1
+        if: ${{!cancelled()}}
+        with:
+          fail_ci_if_error: true
