--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: [ubuntu-latest]
     steps:
 
+      - uses: actions/checkout@v2
+
       - name: "Install python"
         uses: actions/setup-python@v1
         with:
