добавляем анализаторы кода и покрытия

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,8 @@
 [run]
 branch = True
+command_line = -m pytest
+source =
+    src/
 
 [report]
 exclude_lines =
@@ -7,7 +10,7 @@ exclude_lines =
     raise NotImplementedError
 
 [html]
-directory = coverage_html_report
+directory = coverage-report-html
 
 [xml]
-output = coverage.xml
+output = coverage-report.xml
